--- a/MagieMagie/src/app/app.component.html
+++ b/MagieMagie/src/app/app.component.html
@@ -1,3 +1,7 @@
 
-<app-liste-avatar></app-liste-avatar>
-<app-bouton-interface-red></app-bouton-interface-red>
+<div class="main">
+    <app-liste-avatar></app-liste-avatar>
+    <app-bouton-interface-red></app-bouton-interface-red> 
+</div>  
+
+
