structure page login fini

--- a/MagieMagie/src/app/app.component.html
+++ b/MagieMagie/src/app/app.component.html
@@ -1,7 +1,6 @@
 
 <div class="main">
-    <app-liste-avatar></app-liste-avatar>
-    <app-bouton-interface-red></app-bouton-interface-red> 
+    <app-login></app-login>
 </div>  
 
 
