liste avatar mis en page sans modifs faites

--- a/MagieMagie/src/app/liste-avatar/liste-avatar.component.html
+++ b/MagieMagie/src/app/liste-avatar/liste-avatar.component.html
@@ -1,3 +1,26 @@
-<p>
-  liste-avatar works!
-</p>
+<div class="blocIdentification">
+  <form name="form"  >
+    <input type="text" placeholder="Nom d'utilisateur" name="utilisateur" class="identite">
+
+    <div class="blocAvatar">
+      <label>
+        <input type="radio" name="nrj" value="avatar1">
+        <img src="/assets/images/avatar1.jpg" alt="" />
+      </label>
+      <label>
+        <input type="radio" name="nrj" value="avatar2">
+        <img src="/assets/images/avatar2.jpg" alt="" />
+      </label>
+      <label>
+        <input type="radio" name="nrj" value="avatar3">
+        <img src="/assets/images/avatar3.jpg" alt="" />
+      </label>
+      <label>
+        <input type="radio" name="nrj" value="avatar4">
+        <img src="/assets/images/avatar4.jpg" alt="" />
+      </label>
+
+    </div>
+    <input type="submit" value="Valider" class="valide">
+  </form>
+</div>
