--- a/MagieMagie/src/app/element-login/liste-avatar/liste-avatar.component.html
+++ b/MagieMagie/src/app/element-login/liste-avatar/liste-avatar.component.html
@@ -1,26 +1,34 @@
-<div class="blocIdentification">
-  <form name="form"  >
-    <input type="text" placeholder="Nom d'utilisateur" name="utilisateur" class="identite">
+<h1>Choisissez un nom d'utilisateur et un avatar</h1>
 
+<div class="blocIdentification">
+
+  <input type="text" placeholder="Nom d'utilisateur" name="utilisateur" class="identite">
+
+  <form name="form">
     <div class="blocAvatar">
       <label>
         <input type="radio" name="nrj" value="avatar1">
         <img src="/assets/images/avatar1.jpg" alt="" />
+
       </label>
       <label>
         <input type="radio" name="nrj" value="avatar2">
         <img src="/assets/images/avatar2.jpg" alt="" />
+
       </label>
       <label>
         <input type="radio" name="nrj" value="avatar3">
         <img src="/assets/images/avatar3.jpg" alt="" />
+
       </label>
       <label>
         <input type="radio" name="nrj" value="avatar4">
         <img src="/assets/images/avatar4.jpg" alt="" />
-      </label>
 
+      </label>
     </div>
-    <input type="submit" value="Valider" class="valide">
   </form>
+
+  <input type="submit" value="Valider" class="valide">
+
 </div>
