--- a/MagieMagie/src/app/element-login/liste-avatar/liste-avatar.component.html
+++ b/MagieMagie/src/app/element-login/liste-avatar/liste-avatar.component.html
@@ -6,10 +6,10 @@
     <input type="text" placeholder="Nom d'utilisateur" name="utilisateur"  class="identite"  [(ngModel)]="player.pseudo">
     <div class="blocAvatar">
       <div class="avatar" *ngFor="let avatar of listeAvatar" name="body" >
-        <input type="radio" name="nrj" value="{{avatar._id}}" [(ngModel)]="player.idAvatar">
-        <img (click)="avatarSelected = avatar" [class.imagetoggle]="avatarSelected && avatarSelected._id == avatar._id" src="/assets/images/{{avatar.code}}.jpg" alt="" />
+        <img (click)="player.idAvatar = avatar._id" [class.imagetoggle]="player.idAvatar == avatar._id" src="/assets/images/{{avatar.code}}.jpg" alt="" />
       </div>
     </div>
+    <input type="submit" value="Valider" class="valide">
   </form>
-  <input type="submit" value="Valider" class="valide">
+
 </div>
