Lobby presque opérationnel

--- a/MagieMagie/src/app/liste-partie/liste-partie.component.html
+++ b/MagieMagie/src/app/liste-partie/liste-partie.component.html
@@ -18,7 +18,7 @@
             Partie {{game.name}} 
         </div>
         <div *ngFor="let player of game.players"class="informations-participant">
-            <img src="/assets/images/{{player.avatar.code}}.jpg" alt=""/>
+            <!-- <img src="/assets/images/{{player.avatar.code}}.jpg" alt=""/> -->
             <span>{{player.pseudo}}</span>
             
         </div>
