--- a/MagieMagie/src/app/element-login/liste-avatar/liste-avatar.component.scss
+++ b/MagieMagie/src/app/element-login/liste-avatar/liste-avatar.component.scss
@@ -48,6 +48,7 @@ h1{
 img{
   width: 150px;
   height: 200px;
+  margin-left: 50px;
 }
 
 .valide{
@@ -61,7 +62,8 @@ img{
   font-family: "enchanted_land-webfont";
   font-size:2rem;
   width: 400px;
-  margin-top: 10px;
+  margin-top: 100px;
+  align-self:center;
 }
 
 form{
@@ -72,7 +74,8 @@ form{
 .identite{
   height:50px ;
   width: 400px;
-  margin-bottom: 10px;
+  margin-bottom: 100px;
+  margin-top: 30px;
   padding:5px;
   align-self: center;
 }
